--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <title>canvas side scroll</title>
 </head>
 <body>
-    <canvas id="canvas"></canvas>
-
-
+    <canvas id="canvas1"></canvas>
+    <img src="assets/shadow_dog.png" alt="" id="playerImage">
+    <img src="assets/background_single.png" alt="" id="backgroundImage">
+    <img src="assets/enemy_1.png" alt="" id="enemyImage">
     <script src="app.js"></script>
 </body>
 </html>
